vagrant/yamlconfig/05/03_backendtrafficpol.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gundam-httproute-ratelimiting
  namespace: gundamcustom
spec:
  parentRefs:
  - name: shared-gw-tls
    namespace: shared-gw
  hostnames:
  - "cndromania2.app.teknews.cloud"
  rules:
  - backendRefs:
    - name: gundamappsvc
      port: 8080
      kind: Service
  - backendRefs:
    - name: barbatossvc
      port: 8090
      kind: Service
    matches:
    - path:
        type: PathPrefix
        value: /barbatos
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /        
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: policy-httproute
  namespace: gundamcustom
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: gundam-httproute-ratelimiting
  rateLimit:
    global:
      rules:
      - limit:
          requests: 10
          unit: Hour
